--- a/style.css
+++ b/style.css
@@ -37,6 +37,12 @@ ul li{
     font-size: 20x;
     padding: 10px;
 }
+
+ol li{
+    color: rgb(151, 246, 9);
+    font-size: 20x;
+    padding: 10px;
+}
 .tbl{
     margin-left: auto;
     margin-right: auto;
