--- a/practicads/style.css
+++ b/practicads/style.css
@@ -1,30 +1,58 @@
 .container{
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
     justify-content:center;
-    height:100vh;
+    height:10h;
     background-color: rgb(60, 0, 116);
     color: rgb(0, 154, 154);
-    padding: 12px;
-    border-radius: 9px;
+    padding: 10px;
+    border-radius: 6px;
 }
 .titulo{
     font-family: monospace;
-    font-size: 90px;;
-    margin-bottom: 60px;
+    font-size: 40px;;
+    margin-bottom: 28px;
     text-align: center;
 }
 .subtitulo{
     font-family: monospace;
-    font-size: 60px;;
-    margin-bottom: 60px;
+    font-size: 30px;;
+    margin-bottom: 20px;
     text-align: center;
 }
 .input{
-    width: 100%;
+    width: 95%;
     padding: 12px;
-    margin: 20;
+    margin: 17px;
     border-radius: 10px;
+    border-color: yellow;
+    border-width: 2px;
+    border-style: solid;
     
+}
+.botonera {
+    background-color: rgb(12, 12, 12);
+    border-radius: 7px;
+    font-family: 'Arial', sans-serif; /* Fuente más moderna */
+    font-size: 32px; /* Tamaño de fuente ajustado */
+    font-weight: bold; /* Fuente en negrita para mejor legibilidad */
+    letter-spacing: 1px; /* Espaciado entre letras */
+    color: #ffffff; /* Color de fuente para mejor contraste */
+}
+
+.boton {
+    width: 95%;
+    padding: 10px;
+    margin: 14px;
+    background-color: rgb(11, 180, 242);
+    color: #fab106;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    font-family: 'Arial', sans-serif; /* Fuente consistente con .botonera */
+    font-size: 24px; /* Tamaño de fuente ajustado */
+    font-weight: bold; /* Fuente en negrita */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Sombra para mejor legibilidad */
+    letter-spacing: 0.5px; /* Espaciado entre letras */
 }
