--- a/practicads/style.css
+++ b/practicads/style.css
@@ -1,6 +1,6 @@
 .container{
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     align-items: center;
     justify-content:center;
     height:10h;
@@ -55,4 +55,112 @@
     font-weight: bold; /* Fuente en negrita */
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Sombra para mejor legibilidad */
     letter-spacing: 0.5px; /* Espaciado entre letras */
+}
+/*DIseñpo responsivo para cuando la pantalla esté a 1024px*/
+ @media(width<=1024px){
+    .titulo{
+        font-family: monospace;
+        font-size: 5em;;
+        margin-bottom: .5em;
+        text-align: center;
+    }
+    .subtitulo{
+        font-family: monospace;
+        font-size: 2em;;
+        margin-bottom: .3em;
+        text-align: center;
+    }
+    .input{
+        width: 80%;
+        padding: 1em;
+        margin: 2.7%;
+        border-color: rgb(228, 4, 4);
+        border-width: 2px;
+        border-style: solid;        
+    }
+    .botonera{
+        font-size: 2.75em;
+        padding: 10%;
+        text-align: center;
+        width: 90%;
+        margin:auto;
+    }
+    .boton{
+        width: 68%;
+        padding: 1.2em;
+        margin: 6%;
+        font-size: 1em;
+    }
+ }
+ /*DIseñpo responsivo para cuando la pantalla sea menmor a 768px */
+ @media(width<=768px){
+    .titulo{
+        font-family: monospace;
+        font-size: 3em;
+        margin-bottom: 0.3em;
+        text-align: center;
+    }
+    .subtitulo{
+        font-family: monospace;
+        font-size: 1.5em;
+        margin-bottom: .3em;
+        text-align: center;
+    }
+    .input{
+        width: 90%;
+        padding: 1em;
+        margin: 2.7em;
+        border-color: rgb(red, green, blue) ;
+        border-width: 2px;
+        border-style: solid;
+    }
+    .botonera{
+        font-size: 2em;
+        padding: 10%;
+        text-align: center;
+        width: 90%;
+        margin: auto;
+    }
+    .boton{
+        width: 80%;
+        padding: 1em;
+        margin: 5%;
+        font-size: .78em;
+    }
+ }
+/*DIseñpo responsivo para cuando la pantalla sea menmor a 480px*/
+@media(width<=480px){
+    .titulo{
+        font-family: monospace;
+        font-size: 3em;
+        margin-bottom: .5em;
+        text-align:center;
+    }
+    .subtitulo{
+        font-family: monospace;
+        font-size: 1.5em;
+        margin-bottom: .3em;
+        text-align: center;
+    }
+    .input{
+        width: 90%;
+        padding: 0.8em;
+        margin: 2.5%;
+        border-color: orange;
+        border-width: 2px;
+        border-style: solid;
+    }
+    .botonera{
+        font-size: 2em;
+        padding: 8%;
+        text-align: center;
+        width: 95%;
+        margin: auto;
+    }
+    .boton{
+        width: 80%;
+        padding: 1em;
+        margin: 5%;
+        font-size: .87em;
+    }
 }
