--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ ul li{
     font-size: 20x;
     padding: 10px;
 }
-
 .tbl{
     margin-left: auto;
     margin-right: auto;
@@ -54,4 +53,109 @@ td{
     color: rgb(6, 235,201);
     font-size: 25px;
     text-align: center;
+}
+/*DIseñpo responsivo para cuando la pantalla sea menmor a 1024px*/
+@media(width<=480px){
+    body{
+        margin: .630em;
+    }
+    img{
+        width: 10em;
+        height: 10em;
+    }
+    .tit{
+        font-size: 3em;
+    }
+    .hob{
+        font-size: 2.5em;
+    }
+    #especial{
+        font-size: 3em;
+    }
+    ol li{
+        font-size: 1.12em;
+        padding: .5em;
+    }
+    ul li{
+        font-size: 1.12em;
+        padding: .5em;
+    }
+    .tbl{
+        width: 90%;;
+    }
+    th{
+        font-size: 1.20em;
+    }
+    td{
+        font-size: 1.20em;
+    }
+}
+
+/*DIseñpo responsivo para cuando la pantalla sea menmor a 768px*/
+@media(width<=768px){
+    body{
+        margin: 1.5%;
+    }
+    img{
+        width: 14em;
+        height: 14em;
+    }
+    .tit{
+        font-size: 2.5em;
+    }
+    .hob{
+        font-size: 2em;
+    }
+    #especial{
+        font-size: 2.5em;
+    }
+    ol li{
+        font-size: 1em;
+        padding: .4em;
+    }
+    ul li{
+        font-size: 1em;
+        padding: .4em;
+    }
+    .tbl{
+        width: 95%;
+    }
+    th{
+        font-size: 1.1em;
+    }
+    td{
+        font-size: 1.1em;
+    }
+}
+/*DIseñpo responsivo para cuando la pantalla sea menmor a 768px*/
+@media(width<=480){
+    body{
+        margin: .626em;
+    }
+    img{
+        width: 8em;
+        height: 8em;
+    }
+    .tit{
+        font-size: 2.5em;
+    }
+    .hob{
+        font-size: 2.5em;
+    }
+    #especial{
+        font-size: 2.5;
+    }
+    ol li{
+        font-size: 1em;
+        padding: .5em;
+    }
+    .tbl{
+        width: 90%;
+    }
+    th{
+        font-size: 1.25;
+    }
+    td{
+        font-size: 1.25;
+    }
 }
